--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -26,12 +26,8 @@ jobs:
       - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a single command using the runners shell
       - name: Run a one-line script docker
-        run: docker run hello-world
+        run: docker compose up --build -d
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
