--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script docker
-        run: docker compose up --build -d
+        run: docker compose up --build
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
