--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -25,14 +25,14 @@ jobs:
       - name: Run SonarQube analysis
         run: |
           docker run --rm \
-            -e SONAR_HOST_URL="http://10.0.40.193:9000" \
-            -e SONAR_LOGIN="${{ secrets.SONAR_TOKEN }}" \
-            -v "$(pwd):/usr/src" \
-            sonarsource/sonar-scanner-cli \
-            -Dsonar.projectKey=Team9 \
-            -Dsonar.sources=. \
-            -Dsonar.java.binaries=build/classes/java/main \
-            -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
+          -e SONAR_HOST_URL="http://10.0.40.193:9000" \
+          -e SONAR_LOGIN="sqp_dcf970c3a33631566aabe8542a6bd133a3d8284d" \
+          -v "$(pwd):/usr/src" \
+          sonarsource/sonar-scanner-cli \
+          -Dsonar.projectKey=Team9 \
+          -Dsonar.sources=. \
+          -Dsonar.java.binaries=build/classes/java/main \
+          -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
 
       - name: Build Docker image (tag with commit SHA, plus latest)
         run: |
