--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           docker run --rm \
           -e SONAR_HOST_URL="http://10.0.40.193:9000" \
-          -e SONAR_LOGIN="sqp_dcf970c3a33631566aabe8542a6bd133a3d8284d" \
+          -e SONAR_TOKEN="sqp_dcf970c3a33631566aabe8542a6bd133a3d8284d" \
           -v "$(pwd):/usr/src" \
           sonarsource/sonar-scanner-cli \
           -Dsonar.projectKey=Team9 \
