--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -22,17 +22,23 @@ jobs:
       - name: Build with Gradle (incl. JaCoCo)
         run: ./gradlew clean test jacocoTestReport bootJar
 
+      - name: Prepare coverage report for SonarQube
+        run: |
+          mkdir -p src/coverage
+          cp build/reports/jacoco/test/jacocoTestReport.xml src/coverage/
+
       - name: Run SonarQube analysis
         run: |
           docker run --rm \
-          -e SONAR_HOST_URL="http://10.0.40.193:9000" \
-          -e SONAR_TOKEN="sqp_dcf970c3a33631566aabe8542a6bd133a3d8284d" \
-          -v "$(pwd)/src:/usr/src" \
-          sonarsource/sonar-scanner-cli \
-          -Dsonar.projectKey=Team9 \
-          -Dsonar.sources=. \
-          -Dsonar.java.binaries=build/classes/java/main \
-          -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
+            -e SONAR_HOST_URL="http://10.0.40.193:9000" \
+            -e SONAR_TOKEN="sqp_dcf970c3a33631566aabe8542a6bd133a3d8284d" \
+            -v "$(pwd)/src:/usr/src" \
+            sonarsource/sonar-scanner-cli \
+            -Dsonar.projectKey=Team9 \
+            -Dsonar.sources=. \
+            -Dsonar.java.binaries=. \
+            -Dsonar.coverage.jacoco.xmlReportPaths=coverage/jacocoTestReport.xml
+          
 
       - name: Build Docker image (tag with commit SHA, plus latest)
         run: |
