--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -90,8 +90,13 @@ jobs:
 
       - name: Build the documentation
         run: |
-          docker run --rm -u "$(id -u):$(id -g)" -v "${PWD}:/docs" squidfunk/mkdocs-material build -d build/site
+          docker run --rm \
+            -u "$(id -u):$(id -g)" \
+            -v "${PWD}:/docs" \
+            -w /docs/docs \
+            squidfunk/mkdocs-material build -d build/site
           ls -al
+
 
       - name: Create the documentation container
         run: |
