--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -92,10 +92,8 @@ jobs:
         run: |
           docker run --rm \
             -u "$(id -u):$(id -g)" \
-            -v "${PWD}:/docs" \
-            -w /docs/docs \
+            -v "${PWD}/docs:/docs" \
             squidfunk/mkdocs-material build -d build/site
-          ls -al
 
 
       - name: Create the documentation container
