--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -92,7 +92,7 @@ jobs:
         run: |
           docker run --rm \
             -u "$(id -u):$(id -g)" \
-            -v "${PWD}/docs:/docs" \
+            -v "${PWD}:/docs" \
             squidfunk/mkdocs-material build -d build/site
 
 
